# neighborhood_project

./: Cargo.toml  build.rs  readme.md  todo
src/: app.rs  hk.rs  hook.rs  main.rs  window.rs
src/config/: mod.rs
src/hk/: hook.rs  mod.rs
src/timer/: mod.rs
src/ui/: app.rs  mod.rs
ui/: app.slint
