[package]
name = "__neighborhood_project"
version = "0.1.0"
edition = "2024"

[dependencies]
raw-window-handle = "0.6.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
slint = { version = "1.11.0", features = ["raw-window-handle-06"] }

[build-dependencies]
slint-build = "1.11.0"
